# lightshot-scraper

./: .gitignore  Cargo.toml
src/: main.rs
