[package]
name = "lightshot-scraper"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.22", features = ["rustls-tls", "stream"] }
scraper = "0.23.1"
url = "2.5.4"
itertools = "0.14.0"
dotenvy = "0.15.7"

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
